# AudioApp

./: App  CMakeLists.txt
include/: Note.h
src/: Main.cpp
